--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ tauri-plugin-opener = "2.5.x"
 tauri-plugin-log = "2.7.1"
 tauri-plugin-os = "2.3.2"
 tauri-plugin-fs = "2.4.4"
+tauri-plugin-window-state = "2.0.0"
+tauri-plugin-dialog = "2.0.0-beta.0"
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1" 
