--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ tauri-plugin-os = "2.3.2"
 tauri-plugin-fs = "2.4.4"
 tauri-plugin-window-state = "2.0.0"
 tauri-plugin-dialog = "2.0.0-beta.0"
+tauri-plugin-global-shortcut = "2.0.0"
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1" 
